# deep-research-agent

./: .env.example  .gitignore  CLAUDE.md  Claude.md  PROGRESS.md  README.md  pyproject.toml
eval/: .gitkeep
src/deep_research_agent/: __init__.py  __main__.py  pipeline.py
src/deep_research_agent/agents/: __init__.py  planner.py  researcher.py
src/deep_research_agent/api/: __init__.py
src/deep_research_agent/core/: __init__.py  agent_loop.py  llm_client.py  schemas.py  sources.py
src/deep_research_agent/observability/: __init__.py
src/deep_research_agent/storage/: __init__.py
src/deep_research_agent/tools/: __init__.py  fetch.py  search.py
tests/: __init__.py  conftest.py  test_pipeline.py
tests/agents/: test_planner.py  test_researcher.py
tests/core/: test_agent_loop.py  test_llm_client.py
tests/tools/: test_fetch.py  test_search.py
ui/: .gitkeep
