[project]
name = "deep-research-agent"
version = "0.1.0"
description = "An autonomous deep research agent powered by LLMs — searches, reads, and synthesizes information into cited reports."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "NPHieu" }]
keywords = ["llm", "agent", "research", "rag", "groq", "tavily"]

# Core runtime dependencies — enough for Weeks 1-3 (heavy UI/API deps stay optional)
dependencies = [
    "groq>=0.11",          # LLM client (Groq API)
    "python-dotenv>=1.0",  # load secrets from .env
    "pydantic>=2.7",       # structured-output schemas + validation
    "tenacity>=9.0",       # retry with exponential backoff
    "tavily-python>=0.5",  # web search API
    "httpx>=0.27",         # HTTP client for fetching pages
    "trafilatura>=1.12",   # main-content extraction from HTML
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]  # Week 4: HTTP API
ui = ["streamlit>=1.38"]                             # Week 4: demo UI
obs = ["langfuse>=2.0"]                              # Week 4: tracing

# PEP 735 dependency group — uv installs this automatically on `uv sync`
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",  # mock httpx calls in tool tests
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Map the src-layout directory to the importable package name
[tool.hatch.build.targets.wheel]
packages = ["src/deep_research_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "auto" = any `async def test_*` runs under pytest-asyncio without a per-test decorator.
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle(E), pyflakes(F), isort(I), pyupgrade(UP), flake8-bugbear(B)
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

# tavily-python ships no type stubs / py.typed marker — silence the missing-stub error
# for just this third-party module instead of loosening strictness globally.
[[tool.mypy.overrides]]
module = ["tavily.*"]
ignore_missing_imports = true
